Set JVM options for daemon client in performance tests
- optimize for stable results